test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/void_ternary_condition.plx
pub fn f(none) none;

pub fn main(none) i32 {
    #  the condition in a ternary expression must have scalar type
    return ? f() then 1 else 2
}
